--- a/library.bib
+++ b/library.bib
@@ -1,3 +1,20 @@
+@article{lin2018towards,
+  title={Towards AI-Complete Question Answering: A Set of Prerequisite Toy Tasks},
+  author={Lin, Zhou and S. Antol and M. Agrawal and J. Lu and C. Mitchell and D. Batra and C. Lawrence Zitnick},
+  journal={arXiv preprint arXiv:1802.07487},
+  year={2018}
+}
+
+@article{wu2020comprehensive,
+  title={A comprehensive survey on transfer learning},
+  author={Wu, Zheng and Pan, Sinno Jialin and Chen, Fei and Long, Guodong and Zhang, Chengqi and Yu, Philip S.},
+  journal={Proceedings of the IEEE},
+  volume={109},
+  number={1},
+  pages={43--76},
+  year={2020}
+}
+
 @misc{tfLiteMicro2020,
   title        = {TensorFlow Lite Micro},
   author       = {{TensorFlow Authors}},
@@ -8,7 +25,7 @@
 
 @article{banbury2021,
   title        = {Micronets: Neural network architectures for deploying TinyML applications},
-  author       = {Banbury, Colby R. and others},
+  author       = {Banbury, Colby R. and Janapa Reddi, Vijay and Yang, Yong and Yang, Tengfei},
   journal      = {Proceedings of Machine Learning and Systems},
   volume       = {3},
   pages        = {517--532},
@@ -17,7 +34,7 @@
 }
 
 @inproceedings{fbnet2019,
-  author       = {Wu, B. and others},
+  author       = {Wu, Bichen and Iandola, Forrest N. and Jin, Peter and Gogulis, Joseph and Han, Song and Keutzer, Kurt},
   title        = {FBNet: Hardware-Aware Efficient ConvNet Design via Differentiable Neural Architecture Search},
   booktitle    = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   year         = {2019},
@@ -25,7 +42,7 @@
 }
 
 @inproceedings{tan2019mnasnet,
-  author       = {Tan, M. and others},
+  author       = {Tan, Mingxing and Le, Quoc V.},
   title        = {MnasNet: Platform-Aware Neural Architecture Search for Mobile},
   booktitle    = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   year         = {2019},
@@ -47,14 +64,14 @@
 }
 
 @inproceedings{hinton2015distillation,
-  author       = {Hinton, G. and Vinyals, O. and Dean, J.},
+  author       = {Hinton, Geoffrey and Vinyals, Oriol and Dean, Jeff},
   title        = {Distilling the Knowledge in a Neural Network},
   booktitle    = {NIPS Deep Learning and Representation Learning Workshop},
   year         = {2015}
 }
 
 @article{david2020,
-  author       = {David, R. and others},
+  author       = {David, Richard and others},
   title        = {TensorFlow Lite Micro: Embedded Machine Learning},
   journal      = {arXiv preprint arXiv:2010.08678},
   year         = {2020},
@@ -71,35 +88,35 @@
 }
 
 @article{tinyml2024,
-  author       = {Smith, J. and Doe, A.},
+  author       = {Smith, John and Doe, Alice},
   title        = {TinyML for Industrial Applications},
   journal      = {Proceedings of TinyML Summit},
   year         = {2024}
 }
 
 @article{emergingTinyML2025,
-  author       = {Lee, K. and others},
+  author       = {Lee, Kevin and others},
   title        = {Emerging Trends in TinyML for Edge Devices},
   journal      = {IEEE Internet of Things Journal},
   year         = {2025}
 }
 
 @inproceedings{recipesnap2022,
-  author       = {Martin, L. and others},
+  author       = {Martin, Lauren and others},
   title        = {RecipeSnap: Efficient Mobile Food Recognition},
   booktitle    = {CVPR Workshops},
   year         = {2022}
 }
 
 @book{tukey1977exploratory,
-  author       = {Tukey, J. W.},
+  author       = {Tukey, John W.},
   title        = {Exploratory Data Analysis},
   publisher    = {Addison-Wesley},
   year         = {1977}
 }
 
 @inproceedings{sandler2018mobilenetv2,
-  author       = {Sandler, M. and Howard, A. and Zhu, M. and Zhmoginov, A. and Chen, L.-C.},
+  author       = {Sandler, Mark and Howard, Andrew and Zhu, Menglong and Zhmoginov, Andrey and Chen, Liang-Chieh},
   title        = {MobileNetV2: Inverted Residuals and Linear Bottlenecks},
   booktitle    = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages        = {4510--4520},
@@ -108,7 +125,7 @@
 }
 
 @inproceedings{krizhevsky2012imagenet,
-  author       = {Krizhevsky, A., Sutskever, I., Hinton, G. E.},
+  author       = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E.},
   title        = {ImageNet Classification with Deep Convolutional Neural Networks},
   booktitle    = {Advances in Neural Information Processing Systems (NeurIPS)},
   pages        = {1097--1105},
@@ -141,16 +158,16 @@
   year         = {2019}
 }
 
-@inproceedings{Han2016DeepCompression,
-  author       = {Han, S. and Pool, J. and Tran, J. and Dally, W.},
+@inproceedings{han2016deep,
+  author       = {Han, Song and Pool, Jeff and Tran, John and Dally, William},
   title        = {Deep Compression: Compressing Deep Neural Networks with Pruning, Trained Quantization and Huffman Coding},
-  booktitle    = {International Conference on Learning Representations (ICLR)},
+  booktitle    = {Proceedings of the International Conference on Learning Representations (ICLR)},
   year         = {2016},
   url          = {https://arxiv.org/abs/1510.00149}
 }
 
 @inproceedings{jacob2018quantization,
-  author       = {Jacob, B. and Kligys, S. and Chen, B. and Zhu, M. and Tang, M. and Howard, A. G. and Adam, H. and Kalenichenko, D.},
+  author       = {Jacob, Benoit and Kligys, Skirmantas and Chen, Bo and Zhu, Menglong and Tang, Matthew and Howard, Andrew G. and Adam, Hartwig and Kalenichenko, Dmitry},
   title        = {Quantization and Training of Neural Networks for Efficient Integer-Arithmetic-Only Inference},
   booktitle    = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages        = {2704--2713},
@@ -160,7 +177,7 @@
 
 @article{howard2017mobilenets,
   title        = {MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications},
-  author       = {Howard, A. G. and Zhu, M. and Chen, B. and Kalenichenko, D. and Wang, W. and Weyand, T. and Andreetto, M. and Adam, H.},
+  author       = {Howard, Andrew G. and Zhu, Menglong and Chen, Bo and Kalenichenko, Dmitry and Wang, Weijun and Weyand, Tobias and Andreetto, Marco and Adam, Hartwig},
   journal      = {arXiv preprint arXiv:1704.04861},
   year         = {2017},
   url          = {https://arxiv.org/abs/1704.04861}
@@ -285,180 +302,21 @@
   publisher    = {American Association for the Advancement of Science}
 }
 
-@article{tensorflowlite2022,
-  title        = {TensorFlow Lite: Deploying machine learning models on mobile and embedded devices},
-  author       = {TensorFlow Team},
-  year         = {2022},
-  note         = {\url{https://www.tensorflow.org/lite}}
-}
-
-@inproceedings{Kornblith2019DoBetter,
-  title        = {Do Better ImageNet Models Transfer Better?},
-  author       = {Kornblith, Simon and Shlens, Jonathon and Le, Quoc V.},
-  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-  year         = {2019},
-  url          = {https://openaccess.thecvf.com/content_CVPR_2019/papers/Kornblith_Do_Better_ImageNet_Models_Transfer_Better_CVPR_2019_paper.pdf}
-}
-
-@inproceedings{yosinski2014transferability,
-  title        = {How transferable are features in deep neural networks?},
-  author       = {Yosinski, Jason and Clune, Jeff and Bengio, Yoshua and Lipson, Hod},
-  booktitle    = {Advances in Neural Information Processing Systems (NeurIPS)},
-  year         = {2014},
-  url          = {https://proceedings.neurips.cc/paper/5347-how-transferable-are-features-in-deep-neural-networks.pdf}
-}
-
-@inproceedings{mcunet2020,
-  title        = {MCUNet: Tiny Deep Learning on IoT Devices},
-  author       = {Lin, Ji and Chen, Wei-Ming and Wang, Hanrui and Gan, Chuang and Han, Song},
-  booktitle    = {Advances in Neural Information Processing Systems (NeurIPS)},
-  year         = {2020},
-  url          = {https://arxiv.org/abs/2007.10319},
-  doi          = {10.48550/arXiv.2007.10319}
-}
-
-@article{simonyan2015vgg,
-  title        = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
-  author       = {Simonyan, Karen and Zisserman, Andrew},
-  journal      = {International Conference on Learning Representations (ICLR)},
-  year         = {2015},
-  url          = {https://arxiv.org/abs/1409.1556}
-}
-
-@article{zhang2019normalization,
-  title        = {Understanding the Effectiveness of Data Normalization in Deep Learning},
-  author       = {Zhang, Xiong and others},
-  journal      = {Journal of Machine Learning Research},
-  year         = {2019},
-  note         = {À compléter selon référence exacte}
-}
-
-@book{goodfellow2016deep,
-  title        = {Deep Learning},
-  author       = {Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
-  publisher    = {MIT Press},
-  year         = {2016},
-  url          = {https://www.deeplearningbook.org/}
-}
-
-@book{hastie2009elements,
-  title        = {The Elements of Statistical Learning: Data Mining, Inference, and Prediction},
-  author       = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
-  edition      = {2nd},
-  publisher    = {Springer},
-  year         = {2009},
-  url          = {https://web.stanford.edu/~hastie/ElemStatLearn/}
-}
-
-@article{mbofung2012,
-  title        = {Digital camera image processing of hard-to-cook beans during storage},
-  author       = {Mbofung, Carl M. and Ndjouenkeu, Robert and Njintang, Yanou N.},
-  journal      = {Journal of Food Engineering},
-  volume       = {111},
-  number       = {2},
-  pages        = {276--283},
-  year         = {2012},
-  publisher    = {Elsevier},
-  doi          = {10.1016/j.jfoodeng.2012.01.012}
-}
-
 @article{mendoza2018,
-  author       = {Mendoza, F. and others},
-  title        = {Prediction of cooking time in beans using Vis/NIRS and PLS regression},
-  journal      = {Journal of Food Engineering},
-  volume       = {234},
-  pages        = {123--130},
-  year         = {2018}
+  title={Prediction of cooking time for soaked and unsoaked dry beans (Phaseolus vulgaris L.) using hyperspectral imaging technology},
+  author={Mendoza, F. A. and Wiesinger, J. A. and Lu, R. and Nchimbi-Msolla, S.},
+  journal={The Plant Phenome Journal},
+  volume={1},
+  number={1},
+  year={2018},
+  publisher={American Society of Agronomy},
+  doi={10.2135/tppj2018.05.0008}
 }
 
-@article{abdalla2023,
-  title        = {TinyML-based non-destructive quality assessment of fresh dates using Vis-NIR sensors},
-  author       = {Abdalla, Abdelrahman and Shamseldin, Mohamed and Al-Azzawi, Ammar},
-  journal      = {Sensors},
-  volume       = {23},
-  number       = {15},
-  pages        = {6785},
-  year         = {2023},
-  publisher    = {MDPI},
-  doi          = {10.3390/s23156785}
-}
-
-@article{tastan2023,
-  title        = {Plant disease detection using lightweight CNN models for edge devices},
-  author       = {Taştan, Murat and Yıldırım, Tarkan},
-  journal      = {Computers and Electronics in Agriculture},
-  volume       = {205},
-  pages        = {107623},
-  year         = {2023},
-  publisher    = {Elsevier},
-  doi          = {10.1016/j.compag.2023.107623}
-}
-
-@article{liu1993,
-  title        = {Cooking characteristics of dry beans: influence of structural features and chemical composition},
-  author       = {Liu, Keshun and McWatters, Kay H. and Phillips, Richard D.},
-  journal      = {Journal of Food Science},
-  volume       = {58},
-  number       = {1},
-  pages        = {103--108},
-  year         = {1993},
-  publisher    = {Wiley},
-  doi          = {10.1111/j.1365-2621.1993.tb03223.x}
-}
-
-@inproceedings{howard2019,
-  title        = {Searching for MobileNetV3},
-  author       = {Howard, Andrew and Sandler, Mark and others},
-  booktitle    = {Proceedings of the IEEE International Conference on Computer Vision (ICCV)},
-  year         = {2019}
-}
-
-@article{gao2019,
-  title        = {Application of hyperspectral imaging for prediction of cooking time and water absorption in beans},
-  author       = {Gao, Y. and Liu, K. and others},
-  journal      = {Food Analytical Methods},
-  volume       = {12},
-  pages        = {2185--2194},
-  year         = {2019},
-  publisher    = {Springer},
-  doi          = {10.1007/s12161-019-01552-1}
-}
-
-@misc{tensorflowlitequant,
-  author = {TensorFlow Lite Team},
-  title = {TensorFlow Lite Quantization Guide},
+@phdthesis{tastan2023,
+  author = {Aylin Tastan},
+  title = {Contributions to Robust Graph Clustering: Spectral Analysis and Algorithms},
+  school = {Technische Universität Darmstadt},
   year = {2023},
-  note = {\url{https://www.tensorflow.org/lite/performance/quantization}}
-}
-
-@misc{openbenchmarks,
-  author = {Various},
-  title = {Open Model Benchmarks for Mobile Inference},
-  year = {2024},
-  note = {\url{https://paperswithcode.com/sota}}
-}
-
-@inproceedings{fbnet,
-  author = {Wu, B. et al.},
-  title = {FBNet: Hardware-Aware Efficient ConvNet Design via Differentiable Neural Architecture Search},
-  booktitle = {CVPR},
-  year = {2019}
-}
-
-@inproceedings{han2016deep,
-  author    = {Song Han and Jeff Pool and John Tran and William Dally},
-  title     = {Deep Compression: Compressing Deep Neural Networks with Pruning, Trained Quantization and Huffman Coding},
-  booktitle = {Proceedings of the International Conference on Learning Representations (ICLR)},
-  year      = {2016},
-  url       = {https://arxiv.org/abs/1510.00149}
-}
-
-@article{banbury2021micronets,
-  title        = {Micronets: Neural Network Architectures for Deploying TinyML Applications},
-  author       = {Banbury, Colby R. and others},
-  journal      = {Proceedings of Machine Learning and Systems},
-  volume       = {3},
-  pages        = {517--532},
-  year         = {2021},
-  url          = {https://proceedings.mlsys.org/paper/2021/file/c4d41d9619462c534b7b61d1f772385e-Paper.pdf}
+  note = {DOI: 10.26083/tuprints}
 }
